--- a/httpd.conf
+++ b/httpd.conf
@@ -9,7 +9,7 @@ LoadModule rewrite_module    modules/mod_rewrite.so
 LoadModule setenvif_module   modules/mod_setenvif.so
 LoadModule wsgi_module       modules/mod_wsgi.so
 LoadModule unixd_module      modules/mod_unixd.so
-LoadModule expires_module 	 modules/mod_expires.so
+
 
 LogFormat "%{X-Forwarded-For}i %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
 ErrorLog /home/grupogua1/webapps/iron_demo/error_iron_demo.log
@@ -25,12 +25,14 @@ MinSpareThreads 1
 MaxSpareThreads 3
 ThreadsPerChild 5
 
+WSGIApplicationGroup %{GLOBAL}
+TimeOut 600
 
-WSGIDaemonProcess iron_demo processes=2 threads=12 python-path=/home/grupogua1/webapps/iron_demo:/home/grupogua1/webapps/iron_demo/ggcontable:/home/grupogua1/webapps/iron_demo/lib/python2.7 maximum-requests=100 inactivity-timeout=200
-WSGIProcessGroup iron_demo
+WSGIDaemonProcess iron_demo display-name=iron_demo python-path=/home/grupogua1/webapps/iron_demo:/home/grupogua1/webapps/iron_demo/ggcontable:/home/grupogua1/webapps/iron_demo/lib/python2.7 inactivity-timeout=60 maximum-requests=100
+
 WSGIRestrictEmbedded On
 WSGILazyInitialization On
-WSGIScriptAlias / /home/grupogua1/webapps/iron_demo/ggcontable/ggcontable/wsgi.py
+
 
 # Virtual Hosts Uno por cada Cliente que damos de alta
 <VirtualHost _default_:*>
@@ -41,6 +43,7 @@ WSGIScriptAlias / /home/grupogua1/webapps/iron_demo/ggcontable/ggcontable/wsgi.p
 ServerName copyfast.ironweb.com.ar
 ServerAlias www.copyfast.ironweb.com.ar
 WSGIProcessGroup iron_demo 
+WSGIScriptAlias / /home/grupogua1/webapps/iron_demo/ggcontable/ggcontable/wsgi.py
 SetEnv ENTIDAD_ID 1
 SetEnv ENTIDAD_DB ironweb_410
 SetEnv ENTIDAD_DIR copyfast
@@ -50,6 +53,7 @@ SetEnv ENTIDAD_DIR copyfast
 ServerName sucec.ironweb.com.ar
 ServerAlias www.sucec.ironweb.com.ar
 WSGIProcessGroup iron_demo 
+WSGIScriptAlias / /home/grupogua1/webapps/iron_demo/ggcontable/ggcontable/wsgi.py
 SetEnv ENTIDAD_ID 1
 SetEnv ENTIDAD_DB ironweb_411
 SetEnv ENTIDAD_DIR sucec
