--- a/httpd.conf
+++ b/httpd.conf
@@ -10,46 +10,40 @@ LoadModule setenvif_module   modules/mod_setenvif.so
 LoadModule wsgi_module       modules/mod_wsgi.so
 LoadModule unixd_module      modules/mod_unixd.so
 
+LogLevel info
 LogFormat "%{X-Forwarded-For}i %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
-ErrorLog //home/grupogua1/webapps/iron_prueba/ggcontable/error_iron_prueba.log
+ErrorLog /home/grupogua1/iron_logs/error_iron_prueba.log
 
 Listen 20056
 KeepAlive Off
 SetEnvIf X-Forwarded-SSL on HTTPS=1
 ServerLimit 1
 StartServers 1
-MaxRequestWorkers 5
 MinSpareThreads 1
 MaxSpareThreads 3
+MaxRequestWorkers 5
 ThreadsPerChild 5
+
+TimeOut 600
 WSGIRestrictEmbedded On
 WSGILazyInitialization On
-WSGIApplicationGroup %{GLOBAL}
-TimeOut 600
-WSGIDaemonProcess iron_prueba display-name=iron_prueba python-path=/home/grupogua1/webapps/iron_prueba:/home/grupogua1/webapps/iron_prueba/ggcontable:/home/grupogua1/webapps/iron_prueba/lib/python2.7 inactivity-timeout=60 maximum-requests=100
+WSGIDaemonProcess iron_prueba display-name=iron_prueba python-path=/home/grupogua1/webapps/iron_prueba:/home/grupogua1/webapps/iron_prueba/ggcontable:/home/grupogua1/webapps/iron_prueba/lib/python2.7 inactivity-timeout=60
 
 # Virtual Hosts Uno por cada Cliente que damos de alta
 <VirtualHost _default_:*>
     DocumentRoot "."
 </VirtualHost>
 
-
 <VirtualHost *>
 ServerName prueba.ironweb.com.ar
 ServerAlias www.prueba.ironweb.com.ar
 WSGIProcessGroup iron_prueba
-WSGIScriptAlias / /home/grupogua1/webapps/iron_prueba/ggcontable/ggcontable/wsgi.py
-SetEnv ENTIDAD_ID 1
-SetEnv ENTIDAD_DB gg_ironweb
-SetEnv ENTIDAD_DIR copyfast
+WSGIScriptAlias / /home/grupogua1/webapps/iron_prueba/ggcontable/ggcontable/wsgi_prueba.py
 </VirtualHost>
 
 <VirtualHost *>
 ServerName prueba2.ironweb.com.ar
 ServerAlias www.prueba2.ironweb.com.ar
 WSGIProcessGroup iron_prueba
-WSGIScriptAlias / /home/grupogua1/webapps/iron_prueba/ggcontable/ggcontable/wsgi.py
-SetEnv ENTIDAD_ID 1
-SetEnv ENTIDAD_DB gg_contable
-SetEnv ENTIDAD_DIR sucec
+WSGIScriptAlias / /home/grupogua1/webapps/iron_prueba/ggcontable/ggcontable/wsgi_prueba2.py
 </VirtualHost>
