ultima_config_ok

--- a/httpd.conf
+++ b/httpd.conf
@@ -1,4 +1,4 @@
-ServerRoot "/home/grupogua1/webapps/iron_prueba/apache2"
+ServerRoot "/home/grupogua1/webapps/ironweb/apache2"
 
 LoadModule authz_core_module modules/mod_authz_core.so
 LoadModule dir_module        modules/mod_dir.so
@@ -12,22 +12,22 @@ LoadModule unixd_module      modules/mod_unixd.so
 
 LogLevel info
 LogFormat "%{X-Forwarded-For}i %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
-ErrorLog /home/grupogua1/iron_logs/error_iron_prueba.log
+ErrorLog /home/grupogua1/iron_logs/error_ironweb.log
 
-Listen 20056
+Listen 25976
 KeepAlive Off
 SetEnvIf X-Forwarded-SSL on HTTPS=1
-ServerLimit 1
+ServerLimit 10
 StartServers 1
 MinSpareThreads 1
 MaxSpareThreads 3
-MaxRequestWorkers 5
+MaxRequestWorkers 50
 ThreadsPerChild 5
 
 TimeOut 600
 WSGIRestrictEmbedded On
 WSGILazyInitialization On
-WSGIDaemonProcess iron_prueba display-name=iron_prueba python-path=/home/grupogua1/webapps/iron_prueba:/home/grupogua1/webapps/iron_prueba/ggcontable:/home/grupogua1/webapps/iron_prueba/lib/python2.7 inactivity-timeout=60
+WSGIDaemonProcess ironweb display-name=ironweb python-path=/home/grupogua1/webapps/ironweb:/home/grupogua1/webapps/ironweb/ggcontable:/home/grupogua1/webapps/ironweb/lib/python2.7 inactivity-timeout=60
 
 # Virtual Hosts Uno por cada Cliente que damos de alta
 <VirtualHost _default_:*>
@@ -35,15 +35,15 @@ WSGIDaemonProcess iron_prueba display-name=iron_prueba python-path=/home/grupogu
 </VirtualHost>
 
 <VirtualHost *>
-ServerName prueba.ironweb.com.ar
-ServerAlias www.prueba.ironweb.com.ar
-WSGIProcessGroup iron_prueba
-WSGIScriptAlias / /home/grupogua1/webapps/iron_prueba/ggcontable/ggcontable/wsgi_prueba.py
+ServerName estudioguarrera.ironweb.com.ar
+ServerAlias www.estudioguarrera.ironweb.com.ar
+WSGIProcessGroup ironweb
+WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_412.py
 </VirtualHost>
 
 <VirtualHost *>
-ServerName prueba2.ironweb.com.ar
-ServerAlias www.prueba2.ironweb.com.ar
-WSGIProcessGroup iron_prueba
-WSGIScriptAlias / /home/grupogua1/webapps/iron_prueba/ggcontable/ggcontable/wsgi_prueba2.py
+ServerName demo.ironweb.com.ar
+ServerAlias www.demo.ironweb.com.ar
+WSGIProcessGroup ironweb
+WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_demo.py
 </VirtualHost>
