--- a/httpd.conf
+++ b/httpd.conf
@@ -1,4 +1,4 @@
-ServerRoot "/home/grupogua1/webapps/iron_demo/apache2"
+ServerRoot "/home/grupogua1/webapps/ironweb/apache2"
 
 LoadModule authz_core_module modules/mod_authz_core.so
 LoadModule dir_module        modules/mod_dir.so
@@ -10,27 +10,24 @@ LoadModule setenvif_module   modules/mod_setenvif.so
 LoadModule wsgi_module       modules/mod_wsgi.so
 LoadModule unixd_module      modules/mod_unixd.so
 
-
+LogLevel info
 LogFormat "%{X-Forwarded-For}i %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
-ErrorLog /home/grupogua1/iron_logs/error_iron_demo.log
+ErrorLog /home/grupogua1/iron_logs/error_ironweb.log
 
-
-Listen 14043
+Listen 25976
 KeepAlive Off
 SetEnvIf X-Forwarded-SSL on HTTPS=1
-ServerLimit 1
+ServerLimit 10
 StartServers 1
-MaxRequestWorkers 5
 MinSpareThreads 1
 MaxSpareThreads 3
+MaxRequestWorkers 50
 ThreadsPerChild 5
 
 TimeOut 600
-
-WSGIDaemonProcess iron_demo display-name=iron_demo python-path=/home/grupogua1/webapps/iron_demo:/home/grupogua1/webapps/iron_demo/ggcontable:/home/grupogua1/webapps/iron_demo/lib/python2.7 inactivity-timeout=60
 WSGIRestrictEmbedded On
 WSGILazyInitialization On
-
+WSGIDaemonProcess ironweb display-name=ironweb processes=3 threads=3 python-path=/home/grupogua1/webapps/ironweb:/home/grupogua1/webapps/ironweb/ggcontable:/home/grupogua1/webapps/ironweb/lib/python2.7 inactivity-timeout=100
 
 # Virtual Hosts Uno por cada Cliente que damos de alta
 <VirtualHost _default_:*>
@@ -38,9 +35,23 @@ WSGILazyInitialization On
 </VirtualHost>
 
 <VirtualHost *>
-ServerName demo.ironweb.com.ar
-ServerAlias www.demo.ironweb.com.ar
-WSGIProcessGroup iron_demo
-WSGIScriptAlias / /home/grupogua1/webapps/iron_demo/ggcontable/ggcontable/wsgi_demo.py
+ServerName estudioguarrera.ironweb.com.ar
+ServerAlias www.estudioguarrera.ironweb.com.ar
+WSGIProcessGroup ironweb
+WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_412.py
+</VirtualHost>
+
+<VirtualHost *>
+ServerName sucec.ironweb.com.ar
+ServerAlias www.sucec.ironweb.com.ar
+WSGIProcessGroup ironweb
+WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_411.py
+</VirtualHost>
+
+<VirtualHost *>
+ServerName copyfast.ironweb.com.ar
+ServerAlias www.copyfast.ironweb.com.ar
+WSGIProcessGroup ironweb
+WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_410.py
 </VirtualHost>
 
