--- a/httpd.conf
+++ b/httpd.conf
@@ -1,4 +1,4 @@
-ServerRoot "/home/grupogua1/webapps/ironweb/apache2"
+ServerRoot "/home/grupogua1/webapps/iron_prueba/apache2"
 
 LoadModule authz_core_module modules/mod_authz_core.so
 LoadModule dir_module        modules/mod_dir.so
@@ -12,9 +12,9 @@ LoadModule unixd_module      modules/mod_unixd.so
 
 LogLevel info
 LogFormat "%{X-Forwarded-For}i %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
-ErrorLog /home/grupogua1/iron_logs/error_ironweb.log
+ErrorLog /home/grupogua1/iron_logs/error_iron_prueba.log
 
-Listen 25976
+Listen 20056
 KeepAlive Off
 SetEnvIf X-Forwarded-SSL on HTTPS=1
 ServerLimit 10
@@ -27,7 +27,7 @@ ThreadsPerChild 5
 TimeOut 600
 WSGIRestrictEmbedded On
 WSGILazyInitialization On
-WSGIDaemonProcess ironweb display-name=ironweb processes=3 threads=3 python-path=/home/grupogua1/webapps/ironweb:/home/grupogua1/webapps/ironweb/ggcontable:/home/grupogua1/webapps/ironweb/lib/python2.7 inactivity-timeout=100
+WSGIDaemonProcess iron_prueba display-name=iron_prueba python-path=/home/grupogua1/webapps/iron_prueba:/home/grupogua1/webapps/iron_prueba/ggcontable:/home/grupogua1/webapps/iron_prueba/lib/python2.7 inactivity-timeout=60
 
 # Virtual Hosts Uno por cada Cliente que damos de alta
 <VirtualHost _default_:*>
@@ -35,23 +35,15 @@ WSGIDaemonProcess ironweb display-name=ironweb processes=3 threads=3 python-path
 </VirtualHost>
 
 <VirtualHost *>
-ServerName estudioguarrera.ironweb.com.ar
-ServerAlias www.estudioguarrera.ironweb.com.ar
-WSGIProcessGroup ironweb
-WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_412.py
+ServerName prueba.ironweb.com.ar
+ServerAlias www.prueba.ironweb.com.ar
+WSGIProcessGroup iron_prueba
+WSGIScriptAlias / /home/grupogua1/webapps/iron_prueba/ggcontable/ggcontable/wsgi_prueba.py
 </VirtualHost>
 
 <VirtualHost *>
-ServerName sucec.ironweb.com.ar
-ServerAlias www.sucec.ironweb.com.ar
-WSGIProcessGroup ironweb
-WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_411.py
+ServerName prueba2.ironweb.com.ar
+ServerAlias www.prueba2.ironweb.com.ar
+WSGIProcessGroup iron_prueba
+WSGIScriptAlias / /home/grupogua1/webapps/iron_prueba/ggcontable/ggcontable/wsgi_prueba2.py
 </VirtualHost>
-
-<VirtualHost *>
-ServerName copyfast.ironweb.com.ar
-ServerAlias www.copyfast.ironweb.com.ar
-WSGIProcessGroup ironweb
-WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_410.py
-</VirtualHost>
-
