--- a/httpd.conf
+++ b/httpd.conf
@@ -40,3 +40,10 @@ ServerAlias www.prueba.ironweb.com.ar
 WSGIProcessGroup iron_prueba
 WSGIScriptAlias / /home/grupogua1/webapps/iron_prueba/ggcontable/ggcontable/wsgi_prueba.py
 </VirtualHost>
+
+<VirtualHost *>
+ServerName digra.ironweb.com.ar
+ServerAlias www.digra.ironweb.com.ar
+WSGIProcessGroup ironweb
+WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_415.py
+</VirtualHost>
