--- a/httpd.conf
+++ b/httpd.conf
@@ -44,6 +44,6 @@ WSGIScriptAlias / /home/grupogua1/webapps/iron_prueba/ggcontable/ggcontable/wsgi
 <VirtualHost *>
 ServerName digra.ironweb.com.ar
 ServerAlias www.digra.ironweb.com.ar
-WSGIProcessGroup ironweb
-WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_415.py
+WSGIProcessGroup iron_prueba
+WSGIScriptAlias / /home/grupogua1/webapps/iron_prueba/ggcontable/ggcontable/wsgi_415.py
 </VirtualHost>
