--- a/httpd.conf
+++ b/httpd.conf
@@ -69,3 +69,9 @@ WSGIProcessGroup ironweb
 WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_414.py
 </VirtualHost>
 
+<VirtualHost *>
+ServerName laboralsaludsf.ironweb.com.ar
+ServerAlias www.laboralsaludsf.ironweb.com.ar
+WSGIProcessGroup ironweb
+WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_416.py
+</VirtualHost>
