--- a/httpd.conf
+++ b/httpd.conf
@@ -75,3 +75,10 @@ ServerAlias www.laboralsaludsf.ironweb.com.ar
 WSGIProcessGroup ironweb
 WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_416.py
 </VirtualHost>
+
+<VirtualHost *>
+ServerName umbraldistrib.ironweb.com.ar
+ServerAlias www.umbraldistrib.ironweb.com.ar
+WSGIProcessGroup ironweb
+WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_417.py
+</VirtualHost>
