--- a/httpd.conf
+++ b/httpd.conf
@@ -49,8 +49,8 @@ WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_411
 </VirtualHost>
 
 <VirtualHost *>
-ServerName copyfast.ironweb.com.ar
-ServerAlias www.copyfast.ironweb.com.ar
+ServerName omarborgo.ironweb.com.ar
+ServerAlias www.omarborgo.ironweb.com.ar
 WSGIProcessGroup ironweb
 WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_410.py
 </VirtualHost>
