--- a/httpd.conf
+++ b/httpd.conf
@@ -77,8 +77,8 @@ WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_416
 </VirtualHost>
 
 <VirtualHost *>
-ServerName umbraldistrib.ironweb.com.ar
-ServerAlias www.umbraldistrib.ironweb.com.ar
+ServerName maretto.ironweb.com.ar
+ServerAlias www.maretto.ironweb.com.ar
 WSGIProcessGroup ironweb
-WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_417.py
+WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_418.py
 </VirtualHost>
