--- a/httpd.conf
+++ b/httpd.conf
@@ -49,10 +49,10 @@ WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_411
 </VirtualHost>
 
 <VirtualHost *>
-ServerName omarborgo.ironweb.com.ar
-ServerAlias www.omarborgo.ironweb.com.ar
+ServerName digra.ironweb.com.ar
+ServerAlias www.digra.ironweb.com.ar
 WSGIProcessGroup ironweb
-WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_410.py
+WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_415.py
 </VirtualHost>
 
 <VirtualHost *>
@@ -60,13 +60,6 @@ ServerName litoralpor.ironweb.com.ar
 ServerAlias www.litoralpor.ironweb.com.ar
 WSGIProcessGroup ironweb
 WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_413.py
-</VirtualHost>
-
-<VirtualHost *>
-ServerName patpolirubro.ironweb.com.ar
-ServerAlias www.patpolirubro.ironweb.com.ar
-WSGIProcessGroup ironweb
-WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_414.py
 </VirtualHost>
 
 <VirtualHost *>
@@ -82,3 +75,20 @@ ServerAlias www.mrbarbijo.ironweb.com.ar
 WSGIProcessGroup ironweb
 WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_418.py
 </VirtualHost>
+
+<VirtualHost *>
+ServerName omarborgo.ironweb.com.ar
+ServerAlias www.omarborgo.ironweb.com.ar
+WSGIProcessGroup ironweb
+WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_410.py
+</VirtualHost>
+
+<VirtualHost *>
+ServerName demo.ironweb.com.ar
+ServerAlias www.demo.ironweb.com.ar
+WSGIProcessGroup ironweb
+WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_demo.py
+</VirtualHost>
+
+
+
