--- a/pyafipws/conf/rece.ini
+++ b/pyafipws/conf/rece.ini
@@ -5,18 +5,18 @@
 # http://www.sistemasagiles.com.ar/trac/wiki/ManualPyAfipWs#Configuración
 
 [WSAA]
-CERT=Certif20296205363.crt
-PRIVATEKEY=Certif20296205363.key
+CERT=reingart.crt
+PRIVATEKEY=reingart.key
 ##URL=https://wsaa.afip.gov.ar/ws/services/LoginCms
 
 [WSFE]
-CUIT=20296205363
+CUIT=20267565393
 ENTRADA=entrada.txt
 SALIDA=salida.txt
 ##URL=https://servicios1.afip.gov.ar/wsfe/service.asmx
 
 [WSFEv1]
-CUIT=20296205363
+CUIT=20267565393
 CAT_IVA=1
 PTO_VTA=97
 ENTRADA=entrada.txt
@@ -60,6 +60,12 @@ CUIT=20267565393
 ENTRADA=entrada.txt
 SALIDA=salida.txt
 ##URL=https://aws.afip.gov.ar/sr-padron/webservices/personaServiceA4?wsdl
+
+[WS-SR-PADRON-A5]
+CUIT=20267565393
+ENTRADA=entrada.txt
+SALIDA=salida.txt
+##URL=https://aws.afip.gov.ar/sr-padron/webservices/personaServiceA5?wsdl
 
 [FACTURA]
 ARCHIVO=tipo,letra,numero
