--- a/varios/httpd.conf
+++ b/varios/httpd.conf
@@ -1,4 +1,4 @@
-ServerRoot "/home/grupogua1/webapps/iron_prueba/apache2"
+ServerRoot "/home/grupogua1/webapps/ironweb/apache2"
 
 LoadModule authz_core_module modules/mod_authz_core.so
 LoadModule dir_module        modules/mod_dir.so
@@ -9,43 +9,88 @@ LoadModule rewrite_module    modules/mod_rewrite.so
 LoadModule setenvif_module   modules/mod_setenvif.so
 LoadModule wsgi_module       modules/mod_wsgi.so
 LoadModule unixd_module      modules/mod_unixd.so
-LoadModule expires_module 	 modules/mod_expires.so
 
+LogLevel info
 LogFormat "%{X-Forwarded-For}i %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
-CustomLog /home/grupogua1/logs/user/access_iron_prueba.log combined
-ErrorLog /home/grupogua1/logs/user/error_iron_prueba.log
+ErrorLog /home/grupogua1/iron_logs/error_ironweb.log
 
-Listen 20056
+Listen 25976
 KeepAlive Off
 SetEnvIf X-Forwarded-SSL on HTTPS=1
-ServerLimit 1
+ServerLimit 10
 StartServers 1
-MaxRequestWorkers 5
 MinSpareThreads 1
 MaxSpareThreads 3
+MaxRequestWorkers 50
 ThreadsPerChild 5
 
-
-WSGIDaemonProcess iron_prueba processes=2 threads=12 python-path=/home/grupogua1/webapps/iron_prueba:/home/grupogua1/webapps/iron_prueba/ggcontable:/home/grupogua1/webapps/iron_prueba/lib/python2.7 maximum-requests=100 inactivity-timeout=200
-WSGIProcessGroup iron_prueba
+TimeOut 600
 WSGIRestrictEmbedded On
 WSGILazyInitialization On
-WSGIScriptAlias / /home/grupogua1/webapps/iron_prueba/ggcontable/ggcontable/wsgi.py process-group=iron_prueba application-group=%{GLOBAL}
-
+WSGIDaemonProcess ironweb display-name=ironweb processes=3 threads=2 python-path=/home/grupogua1/webapps/ironweb:/home/grupogua1/webapps/ironweb/ggcontable:/home/grupogua1/webapps/ironweb/lib/python2.7 inactivity-timeout=100
 
 # Virtual Hosts Uno por cada Cliente que damos de alta
-<VirtualHost *>
-ServerName prueba.ironweb.com.ar
-WSGIProcessGroup iron_prueba 
-SetEnv ENTIDAD_ID 1
-SetEnv ENTIDAD_DB gg_ironweb
-SetEnv ENTIDAD_DIR copyfast
+<VirtualHost _default_:*>
+    DocumentRoot "."
 </VirtualHost>
+
 
 <VirtualHost *>
 ServerName sucec.ironweb.com.ar
-WSGIProcessGroup iron_prueba 
-SetEnv ENTIDAD_ID 411
-SetEnv ENTIDAD_DB ironweb_411
-SetEnv ENTIDAD_DIR sucec
+ServerAlias www.sucec.ironweb.com.ar
+WSGIProcessGroup ironweb
+WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_411.py
 </VirtualHost>
+
+<VirtualHost *>
+ServerName digra.ironweb.com.ar
+ServerAlias www.digra.ironweb.com.ar
+WSGIProcessGroup ironweb
+WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_415.py
+</VirtualHost>
+
+<VirtualHost *>
+ServerName brolcazsrl.ironweb.com.ar
+ServerAlias www.brolcazsrl.ironweb.com.ar
+WSGIProcessGroup ironweb
+WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_420.py
+</VirtualHost>
+
+<VirtualHost *>
+ServerName estudioguarrera.ironweb.com.ar
+ServerAlias www.estudioguarrera.ironweb.com.ar
+WSGIProcessGroup ironweb
+WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_412.py
+</VirtualHost>
+
+
+<VirtualHost *>
+ServerName litoralpor.ironweb.com.ar
+ServerAlias www.litoralpor.ironweb.com.ar
+WSGIProcessGroup ironweb
+WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_413.py
+</VirtualHost>
+
+<VirtualHost *>
+ServerName laboralsaludsf.ironweb.com.ar
+ServerAlias www.laboralsaludsf.ironweb.com.ar
+WSGIProcessGroup ironweb
+WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_416.py
+</VirtualHost>
+
+<VirtualHost *>
+ServerName labartoladeco.ironweb.com.ar
+ServerAlias www.labartoladeco.ironweb.com.ar
+WSGIProcessGroup ironweb
+WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_414.py
+</VirtualHost>
+
+<VirtualHost *>
+ServerName generaltruck.ironweb.com.ar
+ServerAlias www.generaltruck.ironweb.com.ar
+WSGIProcessGroup ironweb
+WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_419.py
+</VirtualHost>
+
+
+
