--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,5 @@
-version: '3'
-services:
-  mysql5:
-    container_name: mysql5-ironweb
-    image: mysql:5.7    
-    environment:
-      MYSQL_ROOT_PASSWORD: qwerty
-    volumes:
-      - ./varios/mysqldata:/var/lib/mysql
-    ports:
-      - "3306:3306"
-   
-  phpmyadmin:
-    container_name: phpmyadmin-ironweb
-    image: phpmyadmin/phpmyadmin:5.0.1    
-    environment:
-      PMA_HOST: mysql5
-      PMA_USER: root
-      PMA_PASSWORD: qwerty
-    ports:
-      - "8080:80"
-      
+version: '3.5'
+services:        
   django:        
     tty: true        # docker run -t
     build: .
@@ -28,5 +8,11 @@ services:
      - .:/ironweb
     ports:
      - "8000:8000"
+    networks:
+      - tasasweb_default
     links:
-       - mysql5:mydb
+       - mysql5:mysql5
+
+networks:
+  tasasweb_default:
+    external: true
