--- a/varios/httpd.conf
+++ b/varios/httpd.conf
@@ -1,88 +1,124 @@
-ServerRoot "/home/grupogua1/webapps/ironweb/apache2"
 
+Define OPAL_USER grupogua
+Define APP_NAME server_apache
+Define APP_PORT 18191
+Define PROJ_NAME IronWeb
+
+Define APP_ROOT /home/${OPAL_USER}/apps/${APP_NAME}
+Define VIRT_ENV ${APP_ROOT}/env
+Define PROJ_ROOT ${APP_ROOT}/${PROJ_NAME}
+Define LOG_ROOT ${APP_ROOT}/logs/${APP_NAME}
+
+ServerRoot ${APP_ROOT}/apache2
+
+LoadModule mpm_worker_module modules/mod_mpm_worker.so
 LoadModule authz_core_module modules/mod_authz_core.so
 LoadModule dir_module        modules/mod_dir.so
+LoadModule alias_module 	 modules/mod_alias.so
 LoadModule env_module        modules/mod_env.so
 LoadModule log_config_module modules/mod_log_config.so
 LoadModule mime_module       modules/mod_mime.so
 LoadModule rewrite_module    modules/mod_rewrite.so
+LoadModule expires_module modules/mod_expires.so
 LoadModule setenvif_module   modules/mod_setenvif.so
 LoadModule wsgi_module       modules/mod_wsgi.so
 LoadModule unixd_module      modules/mod_unixd.so
+LoadModule filter_module modules/mod_filter.so
+LoadModule deflate_module modules/mod_deflate.so
+#LoadModule status_module modules/mod_status.so
 
-LogLevel info
+#DirectoryIndex index.py	
+DocumentRoot ${APP_ROOT}/apache2/htdocs
+
 LogFormat "%{X-Forwarded-For}i %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
-ErrorLog /home/grupogua1/iron_logs/error_ironweb.log
+CustomLog ${LOG_ROOT}/access_${APP_NAME}.log combined
+ErrorLog ${LOG_ROOT}/error_${APP_NAME}.log
 
-Listen 25976
+Listen ${APP_PORT}
 KeepAlive Off
 SetEnvIf X-Forwarded-SSL on HTTPS=1
-ServerLimit 10
+ServerLimit 2
 StartServers 1
+MaxRequestWorkers 10
 MinSpareThreads 1
 MaxSpareThreads 3
-MaxRequestWorkers 50
 ThreadsPerChild 5
 
-TimeOut 600
+# gzip all of our plaintext resources to make downloads faster
+AddOutputFilterByType DEFLATE text/html text/plain text/xml text/javascript application/x-javascript
+
+<FilesMatch "\.(js|png|jpg|css)$">
+ExpiresDefault "access plus 5 minutes"
+ExpiresActive On
+#Header unset cache-control:
+#Header append cache-control: "no-cache, must-revalidate"
+</FilesMatch>
+
+Alias /static /home/grupogua/apps/server_apache/IronWeb/static
+<Directory /home/grupogua/apps/server_apache/IronWeb/static>
+Require all granted
+</Directory>
+
+Alias /media /home/grupogua/apps/server_apache/IronWeb/media
+<Directory /home/grupogua/apps/server_apache/IronWeb/media>
+Require all granted
+</Directory>
+
+
+# python-home = path to your virtualenv
+# python-path = path to your project directory
+# this is usually all of the python path config that you need.
+WSGIDaemonProcess ironweb display-name=ironweb processes=3 threads=5 inactivity-timeout=100 python-path=${PROJ_ROOT}:${PROJ_ROOT}/${APP_NAME}:${VIRT_ENV}/lib/python2.7:${VIRT_ENV}/lib/python2.7/site-packages
+#WSGIProcessGroup ${APP_NAME}
 WSGIRestrictEmbedded On
 WSGILazyInitialization On
-WSGIDaemonProcess ironweb display-name=ironweb processes=3 threads=3 python-path=/home/grupogua1/webapps/ironweb:/home/grupogua1/webapps/ironweb/ggcontable:/home/grupogua1/webapps/ironweb/lib/python2.7 inactivity-timeout=100
-
-# Virtual Hosts Uno por cada Cliente que damos de alta
-<VirtualHost _default_:*>
-    DocumentRoot "."
-</VirtualHost>
 
 
 <VirtualHost *>
 ServerName sucec.ironweb.com.ar
 ServerAlias www.sucec.ironweb.com.ar
 WSGIProcessGroup ironweb
-WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_411.py
+WSGIScriptAlias / ${PROJ_ROOT}/ggcontable/wsgi_sucec.py
 </VirtualHost>
 
 <VirtualHost *>
 ServerName digra.ironweb.com.ar
 ServerAlias www.digra.ironweb.com.ar
 WSGIProcessGroup ironweb
-WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_415.py
+WSGIScriptAlias / ${PROJ_ROOT}/ggcontable/wsgi_digra.py
 </VirtualHost>
 
 <VirtualHost *>
 ServerName brolcazsrl.ironweb.com.ar
 ServerAlias www.brolcazsrl.ironweb.com.ar
 WSGIProcessGroup ironweb
-WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_420.py
+WSGIScriptAlias / ${PROJ_ROOT}/ggcontable/wsgi_brolcazsrl.py
 </VirtualHost>
 
 <VirtualHost *>
 ServerName estudioguarrera.ironweb.com.ar
 ServerAlias www.estudioguarrera.ironweb.com.ar
 WSGIProcessGroup ironweb
-WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_412.py
-</VirtualHost>
-
-
-<VirtualHost *>
-ServerName litoralpor.ironweb.com.ar
-ServerAlias www.litoralpor.ironweb.com.ar
-WSGIProcessGroup ironweb
-WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_413.py
+WSGIScriptAlias / ${PROJ_ROOT}/ggcontable/wsgi_estudioguarrera.py
 </VirtualHost>
 
 <VirtualHost *>
 ServerName laboralsaludsf.ironweb.com.ar
 ServerAlias www.laboralsaludsf.ironweb.com.ar
 WSGIProcessGroup ironweb
-WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_416.py
+WSGIScriptAlias / ${PROJ_ROOT}/ggcontable/wsgi_laboralsaludsf.py
 </VirtualHost>
 
 <VirtualHost *>
 ServerName labartoladeco.ironweb.com.ar
 ServerAlias www.labartoladeco.ironweb.com.ar
 WSGIProcessGroup ironweb
-WSGIScriptAlias / /home/grupogua1/webapps/ironweb/ggcontable/ggcontable/wsgi_414.py
+WSGIScriptAlias / ${PROJ_ROOT}/ggcontable/wsgi_labartoladeco.py
 </VirtualHost>
 
-
+<VirtualHost *>
+ServerName prueba.ironweb.com.ar
+ServerAlias www.prueba.ironweb.com.ar
+WSGIProcessGroup ironweb
+WSGIScriptAlias / ${PROJ_ROOT}/ggcontable/wsgi_prueba.py
+</VirtualHost>
