Importación de prods a partir de la plantilla, agregado empresa a categorias

--- a/varios/httpd.conf
+++ b/varios/httpd.conf
@@ -37,9 +37,9 @@ ErrorLog ${LOG_ROOT}/error_${APP_NAME}.log
 Listen ${APP_PORT}
 KeepAlive Off
 SetEnvIf X-Forwarded-SSL on HTTPS=1
-ServerLimit 2
+ServerLimit 10
 StartServers 1
-MaxRequestWorkers 10
+MaxRequestWorkers 50
 MinSpareThreads 1
 MaxSpareThreads 3
 ThreadsPerChild 5
@@ -48,7 +48,7 @@ ThreadsPerChild 5
 AddOutputFilterByType DEFLATE text/html text/plain text/xml text/javascript application/x-javascript
 
 <FilesMatch "\.(js|png|jpg|css)$">
-ExpiresDefault "access plus 5 minutes"
+ExpiresDefault "access plus 60 minutes"
 ExpiresActive On
 #Header unset cache-control:
 #Header append cache-control: "no-cache, must-revalidate"
@@ -68,7 +68,7 @@ Require all granted
 # python-home = path to your virtualenv
 # python-path = path to your project directory
 # this is usually all of the python path config that you need.
-WSGIDaemonProcess ironweb display-name=ironweb processes=3 threads=5 inactivity-timeout=100 python-path=${PROJ_ROOT}:${PROJ_ROOT}/${APP_NAME}:${VIRT_ENV}/lib/python2.7:${VIRT_ENV}/lib/python2.7/site-packages
+WSGIDaemonProcess ironweb display-name=ironweb processes=4 threads=6 inactivity-timeout=60 python-path=${PROJ_ROOT}:${PROJ_ROOT}/${APP_NAME}:${VIRT_ENV}/lib/python2.7:${VIRT_ENV}/lib/python2.7/site-packages
 #WSGIProcessGroup ${APP_NAME}
 WSGIRestrictEmbedded On
 WSGILazyInitialization On
@@ -96,10 +96,10 @@ WSGIScriptAlias / ${PROJ_ROOT}/ggcontable/wsgi_brolcazsrl.py
 </VirtualHost>
 
 <VirtualHost *>
-ServerName estudioguarrera.ironweb.com.ar
-ServerAlias www.estudioguarrera.ironweb.com.ar
+ServerName cornercorto.ironweb.com.ar
+ServerAlias www.cornercorto.ironweb.com.ar
 WSGIProcessGroup ironweb
-WSGIScriptAlias / ${PROJ_ROOT}/ggcontable/wsgi_estudioguarrera.py
+WSGIScriptAlias / ${PROJ_ROOT}/ggcontable/wsgi_cornercorto.py
 </VirtualHost>
 
 <VirtualHost *>
@@ -114,6 +114,13 @@ ServerName labartoladeco.ironweb.com.ar
 ServerAlias www.labartoladeco.ironweb.com.ar
 WSGIProcessGroup ironweb
 WSGIScriptAlias / ${PROJ_ROOT}/ggcontable/wsgi_labartoladeco.py
+</VirtualHost>
+
+<VirtualHost *>
+ServerName cirugiamf.ironweb.com.ar
+ServerAlias www.cirugiamf.ironweb.com.ar
+WSGIProcessGroup ironweb
+WSGIScriptAlias / ${PROJ_ROOT}/ggcontable/wsgi_cirugiamf.py
 </VirtualHost>
 
 <VirtualHost *>
