--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -38,12 +38,15 @@ services:
       - traefik.docker.network=dokploy-network
       - traefik.enable=true
       - traefik.http.services.ironweb_dev.loadbalancer.server.port=8000
-      # Dev routing - Dockploy will assign a domain
-      # You can also add specific rules if needed
+      # HTTPS router (primary)
       - traefik.http.routers.ironweb_dev.rule=Host(`development.ironwebgestion.com.ar`, `www.development.ironwebgestion.com.ar`)
       - traefik.http.routers.ironweb_dev.entrypoints=websecure
       - traefik.http.routers.ironweb_dev.tls=true
       - traefik.http.routers.ironweb_dev.tls.certresolver=letsencrypt
+      # HTTP router (redirects to HTTPS)
+      - traefik.http.routers.ironweb_dev_http.rule=Host(`development.ironwebgestion.com.ar`, `www.development.ironwebgestion.com.ar`)
+      - traefik.http.routers.ironweb_dev_http.entrypoints=web
+      - traefik.http.routers.ironweb_dev_http.middlewares=redirect-to-https@docker
 
 volumes:
   ironweb_dev_static:
