--- a/docker-compose.static.yml
+++ b/docker-compose.static.yml
@@ -24,41 +24,14 @@ services:
       - traefik.http.routers.ironweb-static.priority=100
       - traefik.http.routers.ironweb-static.service=ironweb-static
 
-  ironweb-static-dev:
-    image: nginx:alpine
-    container_name: ironweb_static_dev
-    restart: unless-stopped
-    volumes:
-      - ironweb_dev_static:/usr/share/nginx/html/static:ro
-      - ironweb_dev_media:/usr/share/nginx/html/media:ro
-      - ./nginx-static.conf:/etc/nginx/conf.d/default.conf:ro
-    networks:
-      - dokploy-network
-    labels:
-      - traefik.docker.network=dokploy-network
-      - traefik.enable=true
-      - traefik.http.services.ironweb-static-dev.loadbalancer.server.port=80
-      # Route static/media paths to nginx with high priority
-      - traefik.http.routers.ironweb-static-dev.rule=HostRegexp(`{subdomain:.+}.ironwebgestion.com.ar`, `ironwebgestion.com.ar`) && (PathPrefix(`/static`) || PathPrefix(`/media`))
-      - traefik.http.routers.ironweb-static-dev.entrypoints=websecure
-      - traefik.http.routers.ironweb-static-dev.tls=true
-      - traefik.http.routers.ironweb-static-dev.tls.certresolver=letsencrypt
-      - traefik.http.routers.ironweb-static-dev.priority=100
-      - traefik.http.routers.ironweb-static-dev.service=ironweb-static-dev
-
 volumes:
-#  ironweb_static:
-#    external: true
-#    name: ironweb_static
-#  ironweb_media:
-#    external: true
-#    name: ironweb_media
-  ironweb_dev_static:
+  ironweb_static:
     external: true
-    name: ironweb_dev_static
-  ironweb_dev_media:
+    name: ironweb_static
+  ironweb_media:
     external: true
-    name: ironweb_dev_media
+    name: ironweb_media
+
 
 networks:
   dokploy-network:
