--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -38,14 +38,12 @@ services:
       - traefik.docker.network=dokploy-network
       - traefik.enable=true
       - traefik.http.services.ironweb_dev.loadbalancer.server.port=8000
-      # HTTPS router - single domain only (www doesn't exist in DNS)
-      - traefik.http.routers.ironweb_dev.rule=Host(`development.ironwebgestion.com.ar`)
+      # Dev routing - Dockploy will assign a domain
+      # You can also add specific rules if needed
+      - traefik.http.routers.ironweb_dev.rule=Host(`development.ironwebgestion.com.ar`, `www.development.ironwebgestion.com.ar`)
       - traefik.http.routers.ironweb_dev.entrypoints=websecure
       - traefik.http.routers.ironweb_dev.tls=true
       - traefik.http.routers.ironweb_dev.tls.certresolver=letsencrypt
-      # Remove HTTP router - middleware doesn't exist
-      # Users should access via HTTPS directly
-
 
 volumes:
   ironweb_dev_static:
