--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -44,6 +44,9 @@ services:
       - traefik.http.routers.ironweb_dev.entrypoints=websecure
       - traefik.http.routers.ironweb_dev.tls=true
       - traefik.http.routers.ironweb_dev.tls.certresolver=letsencrypt
+      # Add proxy headers middleware (tells Django it's behind HTTPS)
+      - traefik.http.middlewares.ironweb_dev_headers.headers.customrequestheaders.X-Forwarded-Proto=https
+      - traefik.http.routers.ironweb_dev.middlewares=ironweb_dev_headers
 
 volumes:
   ironweb_dev_static:
