adding dockerized app

--- a/ngnix-static.conf
+++ b/ngnix-static.conf
@@ -23,7 +23,7 @@ server {
         access_log off;
         # Enable gzip compression
         gzip on;
-        gzip_types image/jpeg image/png image/gif image/webp;
+        gzip_types image/jpeg image/png image/gif image/webp text/html text/css text/javascript application/javascript;
     }
 
     # Health check endpoint
