--- a/docker-compose.static.yml
+++ b/docker-compose.static.yml
@@ -17,7 +17,7 @@ services:
       - traefik.http.services.ironweb-static.loadbalancer.server.port=80
       # Route static/media paths to nginx with high priority
       # Match all subdomains for static files
-      - traefik.http.routers.ironweb-static.rule=(Host(`development.ironwebgestion.com.ar`) || HostRegexp(`{subdomain:.+}.ironwebgestion.com.ar`, `ironwebgestion.com.ar`)) && (PathPrefix(`/static`) || PathPrefix(`/media`))
+      - traefik.http.routers.ironweb-static.rule=(HostRegexp(`{subdomain:.+}.ironwebgestion.com.ar`, `ironwebgestion.com.ar`)) && (PathPrefix(`/static`) || PathPrefix(`/media`))
       - traefik.http.routers.ironweb-static.entrypoints=websecure
       - traefik.http.routers.ironweb-static.tls=true
       - traefik.http.routers.ironweb-static.tls.certresolver=letsencrypt
