--- a/ngnix-static.conf
+++ b/ngnix-static.conf
@@ -1,35 +1,22 @@
 server {
     listen 80;
-    server_name _;
-
+    server_name localhost;
     root /usr/share/nginx/html;
+    index index.html;
 
-    # Static files
     location /static/ {
         alias /usr/share/nginx/html/static/;
         expires 30d;
         add_header Cache-Control "public, immutable";
-        access_log off;
-        # Enable gzip compression
-        gzip on;
-        gzip_types text/css application/javascript application/json image/svg+xml;
     }
 
-    # Media files
     location /media/ {
         alias /usr/share/nginx/html/media/;
         expires 7d;
         add_header Cache-Control "public";
-        access_log off;
-        # Enable gzip compression
-        gzip on;
-        gzip_types image/jpeg image/png image/gif image/webp text/html text/css text/javascript application/javascript;
     }
 
-    # Health check endpoint
-    location /health {
-        access_log off;
-        return 200 "healthy\n";
-        add_header Content-Type text/plain;
+    location / {
+        return 404;
     }
 }
