--- a/docker-compose.static.yml
+++ b/docker-compose.static.yml
@@ -1,8 +1,6 @@
 services:
   ironweb-static:
-    build:
-      context: .
-      dockerfile: Dockerfile.static
+    image: nginx:alpine
     container_name: ironweb_static
     restart: unless-stopped
     volumes:
