--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,11 +32,18 @@ services:
       - traefik.docker.network=dokploy-network
       - traefik.enable=true
       - traefik.http.services.ironweb.loadbalancer.server.port=8000
-      # Wildcard routing for all subdomains
+      # HTTPS (existing)
       - traefik.http.routers.ironweb.rule=HostRegexp(`{subdomain:.+}.ironwebgestion.com.ar`, `ironwebgestion.com.ar`)
       - traefik.http.routers.ironweb.entrypoints=websecure
       - traefik.http.routers.ironweb.tls=true
       - traefik.http.routers.ironweb.tls.certresolver=letsencrypt
+      # HTTP → redirect to HTTPS
+      - traefik.http.middlewares.ironweb-redirect.redirectscheme.scheme=https
+      - traefik.http.middlewares.ironweb-redirect.redirectscheme.permanent=true
+      - traefik.http.routers.ironweb-http.rule=HostRegexp(`{subdomain:.+}.ironwebgestion.com.ar`, `ironwebgestion.com.ar`)
+      - traefik.http.routers.ironweb-http.entrypoints=web
+      - traefik.http.routers.ironweb-http.middlewares=ironweb-redirect
+      - traefik.http.routers.ironweb-http.service=ironweb
 
 volumes:
   ironweb_static:
