--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,25 @@ services:
       - ironweb_logs:/app/logs
     networks:
       - dokploy-network
-    # No Traefik labels - routing via dynamic file
+    labels:
+      - traefik.docker.network=dokploy-network
+      - traefik.enable=true
+      - traefik.http.services.ironweb.loadbalancer.server.port=8000
+      # Main app: *.ironwebgestion.com.ar (all paths except /static, /media)
+      - traefik.http.routers.ironweb.rule=HostRegexp(`{host:([a-z0-9-]+\\.)?ironwebgestion\\.com\\.ar}`)
+      - traefik.http.routers.ironweb.entrypoints=websecure
+      - traefik.http.routers.ironweb.tls=true
+      - traefik.http.routers.ironweb.tls.certresolver=letsencrypt
+      - traefik.http.routers.ironweb.service=ironweb
+      - traefik.http.routers.ironweb.priority=1
+      # HTTP → redirect to HTTPS
+      - traefik.http.middlewares.ironweb-redirect.redirectscheme.scheme=https
+      - traefik.http.middlewares.ironweb-redirect.redirectscheme.permanent=true
+      - traefik.http.routers.ironweb-http.rule=HostRegexp(`{host:([a-z0-9-]+\\.)?ironwebgestion\\.com\\.ar}`)
+      - traefik.http.routers.ironweb-http.entrypoints=web
+      - traefik.http.routers.ironweb-http.middlewares=ironweb-redirect
+      - traefik.http.routers.ironweb-http.service=ironweb
+      - traefik.http.routers.ironweb-http.priority=1
 
 volumes:
   ironweb_static:
